--- a/platformio.ini
+++ b/platformio.ini
@@ -13,6 +13,6 @@ platform = espressif8266
 board = nodemcu
 framework = arduino
 lib_deps = 
-	;rfetick/Kalman@^1.1.0
 	tkjelectronics/Kalman Filter Library@^1.0.2
 	pkourany/MPU6050@^1.0.3
+	emelianov/modbus-esp8266@^4.1.0
