--- a/platformio.ini
+++ b/platformio.ini
@@ -10,10 +10,9 @@
 
 [env:nodemcu]
 platform = espressif8266
-; platform = espressif32
 board = nodemcu
 framework = arduino
 lib_deps = 
 	tkjelectronics/Kalman Filter Library@^1.0.2
-	pkourany/MPU6050@^1.0.3
+	pkourany/MPU6050@^1.0.3;не трогать это, баг в библиотеке!!!
 	emelianov/modbus-esp8266@^4.1.0
