--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "cmake.sourceDirectory": "${workspaceFolder}/.pio/libdeps/nodemcu/AsyncTCP"
+    "cmake.sourceDirectory": "${workspaceFolder}/nodemcu/ArduinoJson"
 }
