--- a/platformio.ini
+++ b/platformio.ini
@@ -12,3 +12,6 @@
 platform = espressif8266
 board = nodemcu
 framework = arduino
+lib_deps=
+    tkjelectronics/Kalman Filter Library@^1.0.2
+    electroniccats/MPU6050 @ ^0.6.0
