--- a/platformio.ini
+++ b/platformio.ini
@@ -8,9 +8,9 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:nodemcu]
-platform = espressif8266
-board = nodemcu
+[env:nanoatmega328new]
+platform = atmelavr
+board = nanoatmega328new
 framework = arduino
 lib_deps=
     tkjelectronics/Kalman Filter Library@^1.0.2
