--- a/platformio.ini
+++ b/platformio.ini
@@ -12,6 +12,7 @@
 platform = atmelavr
 board = nanoatmega328new
 framework = arduino
-lib_deps=
-    tkjelectronics/Kalman Filter Library@^1.0.2
-    electroniccats/MPU6050 @ ^0.6.0
+lib_deps = 
+	tkjelectronics/Kalman Filter Library@^1.0.2
+	electroniccats/MPU6050 @ ^0.6.0
+	mbed-whismanoid/CmdLine
