--- a/platformio.ini
+++ b/platformio.ini
@@ -14,5 +14,5 @@ board = nanoatmega328new
 framework = arduino
 lib_deps = 
 	tkjelectronics/Kalman Filter Library@^1.0.2
-;	electroniccats/MPU6050 @ ^0.6.0
 	mbed-whismanoid/CmdLine
+	electroniccats/MPU6050@^0.6.0
