--- a/platformio.ini
+++ b/platformio.ini
@@ -17,18 +17,18 @@ lib_deps =
 	electroniccats/MPU6050 @ ^0.6.0
 	mbed-whismanoid/CmdLine
 
-[env:nanoatmega328]
-platform = atmelavr
-board = nanoatmega328
-framework = arduino
-lib_deps = 
-	tkjelectronics/Kalman Filter Library@^1.0.2
-	electroniccats/MPU6050 @ ^0.6.0
-	mbed-whismanoid/CmdLine
+; [env:nanoatmega328]
+; platform = atmelavr
+; board = nanoatmega328
+; framework = arduino
+; lib_deps = 
+; 	tkjelectronics/Kalman Filter Library@^1.0.2
+; 	electroniccats/MPU6050 @ ^0.6.0
+; 	mbed-whismanoid/CmdLine
 
 
-[env:nano]
-platform = atmelavr
-board = nanoatmega328
-framework = arduino
-monitor_speed = 115200
+; [env:nano]
+; platform = atmelavr
+; board = nanoatmega328
+; framework = arduino
+; monitor_speed = 115200
