--- a/platformio.ini
+++ b/platformio.ini
@@ -14,17 +14,17 @@ board = nanoatmega328new
 framework = arduino
 lib_deps = 
 	tkjelectronics/Kalman Filter Library@^1.0.2
-	electroniccats/MPU6050 @ ^0.6.0
+	electroniccats/MPU6050
 	mbed-whismanoid/CmdLine
 
-; [env:nanoatmega328]
-; platform = atmelavr
-; board = nanoatmega328
-; framework = arduino
-; lib_deps = 
-; 	tkjelectronics/Kalman Filter Library@^1.0.2
-; 	electroniccats/MPU6050 @ ^0.6.0
-; 	mbed-whismanoid/CmdLine
+[env:nanoatmega328]
+platform = atmelavr
+board = nanoatmega328
+framework = arduino
+lib_deps = 
+	tkjelectronics/Kalman Filter Library@^1.0.2
+	electroniccats/MPU6050 @ ^0.6.0
+	mbed-whismanoid/CmdLine
 
 
 ; [env:nano]
