--- a/platformio.ini
+++ b/platformio.ini
@@ -12,6 +12,12 @@
 platform = espressif8266
 board = nodemcu
 framework = arduino
-lib_deps=
-    tkjelectronics/Kalman Filter Library@^1.0.2
-    electroniccats/MPU6050 @ ^0.6.0
+lib_deps = 
+	tkjelectronics/Kalman Filter Library@^1.0.2
+	electroniccats/MPU6050 @ ^0.6.0
+	knolleary/PubSubClient@^2.8
+
+[env:d1_mini_pro]
+platform = espressif8266
+board = d1_mini_pro
+lib_deps = knolleary/PubSubClient@^2.8
